# szurubooru

./: .gitignore  flake.nix
client/: build.js  package.nix
client/css/: expander-control.styl  (+2 more)
doc/: API.md
server/: .dockerignore  Dockerfile  config.yaml.dist  docker-start.sh  package.nix  pyproject.toml  requirements.txt  run-server-tests.sh
server/szurubooru/: config.py  db.py
server/szurubooru/api/: info_api.py  tag_api.py  tag_category_api.py
server/szurubooru/func/: image_hash.py  images.py  pools.py  posts.py  snapshots.py  tag_categories.py  tags.py
server/szurubooru/migrations/versions/: 5436e77141a8_add_recommendation_weight_to_tag_.py  54de8acc6cef_add_default_pool_category.py  5f00af3004a4_add_default_tag_category.py  9837fc981ec7_add_order_to_tag_names.py  9ef1a1643c2a_update_user_table_for_hardened_passwords.py
server/szurubooru/model/: comment.py  pool.py  pool_category.py  post.py  tag.py  tag_category.py  user.py
server/szurubooru/rest/: context.py
server/szurubooru/search/: executor.py
server/szurubooru/search/configs/: tag_search_config.py  util.py
server/szurubooru/tests/: conftest.py
server/szurubooru/tests/api/: test_info.py  test_pool_merging.py  test_post_merging.py  test_tag_category_retrieving.py  test_tag_category_updating.py  test_tag_merging.py  test_tag_recommendations_retrieving.py  test_user_creating.py
server/szurubooru/tests/func/: test_posts.py  test_tag_categories.py  test_tags.py
server/szurubooru/tests/rest/: test_context.py
server/szurubooru/tests/search/configs/: test_tag_search_config.py
(+16 files in other folders)
