[project]
name = "szurubooru"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "certifi>=2026.5.20",
    "coloredlogs>=15.0.1",
    "numpy>=2.0.0",
    "pillow>=11.2.1",
    "pillow-heif>=1.3.0",
    "psycopg2-binary",
    "pynacl",
    "pyRFC3339",
    "pytz",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "yt-dlp",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-pgsql",
    "freezegun",
    "pycodestyle",
    "pytest-xdist",
    "flake8",
    "flake8-pyproject",
]

[tool.flake8]
filename = "szurubooru/"
exclude = ["__pycache__"]
ignore = ["F401", "W503", "W504", "E203", "E231"]
max-line-length = 79

[tool.pdm]
distribution = false

[tool.black]
line-length = 79

[tool.isort]
known_first_party = ["szurubooru"]
known_third_party = ["PIL", "alembic", "coloredlogs", "freezegun", "nacl", "numpy", "pyrfc3339", "pytest", "pytz", "sqlalchemy", "yaml", "youtube_dl"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
